Account-overview page klaar

--- a/src/main/resources/templates/fragments/jumbotron.html
+++ b/src/main/resources/templates/fragments/jumbotron.html
@@ -45,7 +45,7 @@
      style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0) ), url('/images/DROVN5.svg'); background-position: left 70%; background-repeat: no-repeat; background-size: cover; "
      th:fragment="jumbotron-accounts">
     <div class="container text-white">
-        <h1 align="left"><span class="display-4 h-25">Welkom, </span><span style="color: #0066ff" th:text="${nameCurrentCus}"></span>
+        <h1 align="left"><span class="display-4 h-25; text-orange">Welkom, </span><span style="color: #0066ff; font-size: 140%" th:text="${nameCurrentCus}"></span>
         </h1>
         <p> <br></p>
         <h1 align="right"><span class="display-4 h-25"><span class="text-orange">Rekeningoverzicht</span></span></h1>
