--- a/src/main/resources/templates/fragments/main.html
+++ b/src/main/resources/templates/fragments/main.html
@@ -38,7 +38,7 @@
 
 <main class="min-vw-100" role="main" th:fragment="main-accounts">
 <div th:replace="fragments/jumbotron :: jumbotron-accounts"></div>
-<div th:replace="fragments/main-content :: content-mutations"></div>
+<div th:replace="fragments/main-content :: content-accounts"></div>
 </main>
 
 </html>
