--- a/src/main/resources/templates/pages/account-overview.html
+++ b/src/main/resources/templates/pages/account-overview.html
@@ -1,81 +1,19 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/head :: head-default (pageTitle='Rekeningoverzicht', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 
+<head th:replace="fragments/head :: head-accounts (pageTitle='Rekeningoverzicht', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 <div class="container-fluid min-vh-100" id="page">
-    <div id="header" class="row header-default">
+    <div class="row header-default" id="header">
         <header th:replace="fragments/header :: header-default"></header>
     </div>
-
-    <div id="main-content" align="center">
-        <main role="main" class="min-vw-100">
-            <div class="jumbotron"
-                 style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0) ), url('/images/DROVN5.svg'); background-position: left center; background-repeat: no-repeat; background-size: cover; width: 90%; max-height: 60%">
-                <div class="container pt-sm-2 pb-sm-2 text-white">
-
-                    <h1 align="left"><span class="text-orange"> Welkom, </span><span style="color: #0066ff" th:text="${nameCurrentCus}"></span></h1>
-                    <p> <br></p>
-                    <h1 align="right"><span class="display-4 h-25"><span class="text-orange">Rekeningoverzicht</span></span></h1>
-
-
-                </div>
-            </div >
-            <form action="#" method="get" th:action="@{/do-transaction/}" th:object="${customerWithAccountOverview}">
-                <!--        <div align="center">-->
-                <!--            <p class="mt-5"><a class="btn btn-primary btn-lg btn-block" style="font-size: initial; width: 90%" href="#"-->
-                <!--                               role="button">Geld overboeken »</a></p>-->
-                <!--        </div>-->
-                <div class="jumbotron-fluid">
-                    <a class="mt-lg-5"><button class="btn btn-primary btn-lg btn-block" style="font-size: 150%; width: 90%" href="#"
-                                               role="button"> Geld overboeken >></button></a>
-                </div>
-            </form>
-            <p><br></p>
-<!--            <p><br></p>-->
-            <div class="jumbotron" style="background: linear-gradient(65deg, rgba(243, 146, 0, 0.2), rgba(243, 146, 0, 0.2) );background-size: cover; width: 90%; max-height: 60%">
-                <p style="font-size: 250%; color: #F39200" align="center" th:if="${customerWithAccountOverview.getAccountList().isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
-                <div align="center" style="width: border-box">
-
-                    <style>
-                        th, td {
-                            padding: 20px;
-                        }
-                    </style>
-
-
-
-        <table style="width: 100%"  class="table-hover; container-fluid"
-            th:unless="${customerWithAccountOverview.getAccountList().isEmpty()}"
-            th:object="${customerWithAccountOverview}">
-        <thead class="text-white" bgcolor="#312783" style="font-size: 150%">
-        <tr>
-            <th scope="col">IBAN</th>
-            <th scope="col">Tenaamstelling</th>
-            <th scope="col">Saldo</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr style="font-size: 150%" th:each="a : ${customerWithAccountOverview.getAccountList()}">
-            <td>
-                <a th:href="@{/account_details/{id}(id= ${a.getAccountID})}" >
-                    <span th:text="${a.iban}"></span>
-                </a>
-            </td>
-            <td style="color: #312783"> <ul> <li th:each="customerName : ${a.getAccountHolderNames()}" th:text="${customerName}"></li></ul></td>
-            <td style="color: #312783">€ <span th:text="${a.showBalance}"></span></td>
-        </tr>
-        </tbody>
-    </table>
-        </div>
-      </div>
-
-
-        </main>
+    <div class="row mb-5" id="main-content">
+        <main th:replace="fragments/main :: main-accounts"></main>
+    </div>
+    <div class="row footer-default" id="footer">
+        <footer th:replace="fragments/footer :: footer-default"></footer>
     </div>
 </div>
-<div id="footer" class="row footer-default">
-    <footer th:replace="fragments/footer :: footer-default"></footer>
-</div>
 </body>
+
 </html>
