--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -98,6 +98,19 @@
     <script defer src="/js/registration.js"></script>
 </head>
 
-
+<head th:fragment="head-accounts (pageTitle, metaRobots, metaDescription, metaKeywords)">
+    <meta charset="UTF-8"/>
+    <title th:text="${pageTitle}">Head</title>
+    <meta name="robots" th:content="${metaRobots}"/>
+    <meta name="description" th:content="${metaDescription}"/>
+    <meta name="keywords" th:content="${metaKeywords}"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="/css/styles.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/acc6e38b93.js"></script>
+    <script src="/js/jquery/jquery.min.js"></script>
+    <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script defer src="/js/form-validation.js"></script>
+    <script defer src="/js/registration.js"></script>
+</head>
 
 </html>
