--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -123,6 +123,66 @@
         </div>
     </div>
 </div>
+
+<div class="container pt-5" th:fragment="content-accounts">
+    <div class="row">
+        <div class="col-md-4 pt-5">
+            <p action="#" method="get" th:action="@{/do-transaction/}" th:object="${customerWithAccountOverview}">
+                <a class="btn btn-primary btn-block btn-group-lg; row-cols-4" style="font-size: 125%" th:href="@{/do-transaction/}" role="button"
+                >Geld overboeken »</a></p>
+                <a class="btn btn-primary btn-block btn-group-lg; row-cols-4" style="font-size: 125%" th:href="@{/}" role="button"
+                >« Terug naar Home</a></p>
+            </p>
+        </div>
+
+        <div class="col-md-8 pt-0">
+
+            <div class="container pt-0">
+                <div th:if="${customerWithAccountOverview.getAccountList().isEmpty()}">
+                    <p style="font-size: 200%; color: #F39200" align="center"
+                    >Er zijn geen rekeningen om weer te geven.</p>
+                </div>
+            </div>
+
+
+            <div  th:unless="${customerWithAccountOverview.getAccountList().isEmpty()}"
+             th:object="${customerWithAccountOverview}">
+
+                <th:block th:each="a : ${customerWithAccountOverview.getAccountList()}">
+
+
+
+                    <div class="container pt-5" >
+                <div class="card"  style="border-color: #312783;border-width: medium
+             ;background-color: rgba(243, 146, 0, 0.6)">
+
+
+                    <th:block>
+
+                <h4 style="font-size: 125%; padding: 20px" >
+                    <p style="padding: 0px">
+                        <a th:href="@{/account_details/{id}(id= ${a.getAccountID})}" >
+                        <span style="font-size: 150%; font-weight: bold; color: white" th:text="${a.iban}"></span>
+                            <i th:href="@{/account_details/{id}(id= ${a.getAccountID})}" class="fas fa-angle-right rotate-icon; float-right" style="color: white;font-size: 200%"></i>
+                        </a>
+                    </p>
+
+
+                    <dl>
+                        <dt class="col-md-6" style="color: #312783;font-size: 125%" th:each="customerName : ${a.getAccountHolderNames()}" th:text="${customerName}" ></dt>
+                        <dd class="col-md-2; float-md-right" style="color: #312783; font-size: 125%; font-weight: bold" th:text="${a.showBalance}"></dd>
+                    </dl>
+                </h4>
+                </th:block>
+                </div>
+                </div>
+                </th:block>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="container pt-5" th:fragment="content-mutations">
     <div class="row">
         <div class="col-md-4">
@@ -201,73 +261,6 @@
     </div>
 </div>
 
-<!--<div class="container pt-5" th:fragment="content-account-overview">-->
-<!--    <div class="row">-->
-<!--        <div class="col-md-4">-->
-<!--            <p action="#" method="get" th:action="@{/do-transaction/}" th:object="${customerWithAccountOverview}">-->
-<!--                <a class="btn btn-primary btn-lg btn-block" style="font-size: 125%; width: 100%" th:href="@{/do-transaction/}" role="button"-->
-<!--                >Geld overboeken »</a></p>-->
-<!--            <p action="#" method="post" th:action="@{/customer-with-accounts}" th:object="${customerWithAccountOverview}">-->
-<!--                <a class="btn btn-primary btn-lg btn-block" style="font-size: 125%; width: 100%" th:href="@{/customer-with-accounts}" role="button"-->
-<!--                >« Terug naar de Homepagina</a></p>-->
-<!--            </p>-->
-<!--        </div>-->
 
 
-
-<!--        <div class="col-md-8">-->
-
-<!--            <div class="container pt-0" style="border-color: #312783; border-width: medium;-->
-<!--                        background-color: white">-->
-<!--                <p style="font-size: 125%" align="center" th:if="${account.getTransactions().isEmpty(}">-->
-<!--                Er zijn geen bij- en afschrijvingen om weer te geven</p>-->
-
-<!--            <div class="container pt-0" style="border-color: #312783;border-width: medium;-->
-<!--                         background-color: white"  th:unless="${account.getTransactions().isEmpty()}"-->
-<!--                 th:object="${account}">-->
-
-<!--                &lt;!&ndash;Accordion wrapper&ndash;&gt;-->
-<!--                <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="false" th:each="t : ${account.getTransactions}" >-->
-
-<!--                    &lt;!&ndash; Accordion card &ndash;&gt;-->
-<!--                    <div class="card"  style="border-color: #312783;border-width: medium-->
-<!--                         ;background-color: white" th:each="date :${t.showDate}">-->
-
-<!--                        &lt;!&ndash; Card header &ndash;&gt;-->
-<!--                        <div class="card-header" role="tab" id="transaction" >-->
-<!--                            <a data-toggle="collapse" href="#collapse" aria-expanded="false"-->
-<!--                               aria-controls="collapseOne1">-->
-<!--                                <h4> <span class="mb-0" style="color: #F39200"  th:text="${date}">Datum></span>-->
-<!--                                    <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200"></i>-->
-<!--                                </h4>-->
-<!--                                <h5>-->
-<!--                                    <dl class="row">-->
-<!--                                        <dt class="col-md-10" style="color: #312783" th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" ></dt>-->
-<!--                                        <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.showAmount}"th:text="${amount}"></dd>-->
-<!--                                    </dl>-->
-<!--                                </h5>-->
-<!--                            </a>-->
-<!--                        </div>-->
-
-<!--                        &lt;!&ndash; Card body &ndash;&gt;-->
-<!--                        <div id="collapse" class="collapse hide" role="tabpanel" aria-labelledby="heading">-->
-<!--                            <div class="card-body" style="background-color: rgba(243, 146, 0, 0.2)">-->
-<!--                                <p style="color: #312783" th:text="${t.showTransactionDetails()}"></p>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                    </div>-->
-<!--                    &lt;!&ndash; Accordion card &ndash;&gt;-->
-
-<!--                </div>-->
-<!--                &lt;!&ndash; Accordion wrapper &ndash;&gt;-->
-<!--                <br>-->
-
-
-<!--            </div>-->
-
-<!--        </div>-->
-
-<!--    </div>-->
-<!--</div>-->
 </html>
