Geld overmaken: Namencheck verbeterd bij meerdere rekeninghouders + transaction-error pagina werkt weer

--- a/src/main/resources/templates/pages/errorpage-transaction.html
+++ b/src/main/resources/templates/pages/errorpage-transaction.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
-<head th:replace="fragments/head :: head-transaction (pageTitle='Ongeldige IBAN of niet bestaande IBAN/Ontvanger combinatie', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')">
+<head th:replace="fragments/head :: head-transaction-do (pageTitle='Ongeldige IBAN of niet bestaande IBAN/Ontvanger combinatie', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')">
 </head>
 <body>
 <div class="container-fluid min-vh-100" id="page">
