--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -56,6 +56,7 @@
     <script src="https://kit.fontawesome.com/acc6e38b93.js" crossorigin="anonymous"></script>
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script defer src="/js/load-customer-names.js"></script>
     <script defer src="/js/do-transaction.js"></script>
 </head>
 
@@ -70,6 +71,7 @@
     <script src="https://kit.fontawesome.com/acc6e38b93.js" crossorigin="anonymous"></script>
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script defer src="/js/load-customer-names.js"></script>
     <script defer src="/js/confirm-transaction.js"></script>
 </head>
 
