--- a/src/main/resources/templates/fragments/main-content.html
+++ b/src/main/resources/templates/fragments/main-content.html
@@ -215,18 +215,17 @@
 
                     <!-- Accordion card -->
                     <div class="card"  style="border-color: #312783;border-width: medium
-                         ;background-color: white" th:if="${not #lists.isEmpty(accountWithTransactionsByDate)}" th:each="t : ${entry.value}">
+                         ;background-color:rgba(0,102,255, 0.2)" th:if="${not #lists.isEmpty(accountWithTransactionsByDate)}" th:each="t, iterStat : ${entry.value}">
 
 
                         <!-- Card header -->
                         <div >
                             <h5>
                                 <th:block>
-                                        <div class = card-header style="border-color: #312783;border-width: medium
-                                                ;background-color: rgba(0,102,255, 0.2)">
+                                        <div class = panel-heading style="border-color: #312783;border-width: medium
+                                                " data-toggle="collapse" th:href="'#collapse' + ${iterStat.index} ">
                                             <i class="fas fa-angle-down rotate-icon; float-right" style="color: #F39200;font-size: x-large"></i>
-                                    <dl data-toggle="collapse" href="#collapse" aria-expanded="false"
-                                        aria-controls="collapseOne1">
+                                    <dl>
                                         <dt class="col-md-10" style="color: #312783" th:each="name : ${t.contraAccountHolderNames}" th:text="${name}" ></dt>
                                         <dd class="col-md-2; float-md-right" style="color: #312783" th:each="amount :${t.amount}"th:text="${t.showAmount()}"></dd>
                                     </dl>
@@ -237,7 +236,7 @@
                         </div>
 
                         <!-- Card body -->
-                        <div id="collapse" class="collapse hide" role="tabpanel" aria-labelledby="heading">
+                        <div th:id="'collapse' + ${iterStat.index}" class="panel-collapse collapse in">
                             <div class="card-body" style="background-color: rgba(243, 146, 0, 0.6)">
                                 <p style="color: #312783; font-size: large; font-weight: bold" th:each="description : ${t.description}" th:text="${t.showTransactionDetails()}"> </p>
                             </div>
