--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -19,6 +19,7 @@
     <script src="https://kit.fontawesome.com/acc6e38b93.js" crossorigin="anonymous"></script>
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 </head>
 
 <head th:fragment="head-login">
@@ -28,6 +29,7 @@
     <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
     <script defer src="/js/form-validation.js"></script>
     <script defer src="/js/login.js"></script>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 </head>
 
 <head th:fragment="head-registration (pageTitle, metaRobots, metaDescription, metaKeywords)">
