--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -3,58 +3,144 @@
 <head th:replace="fragments/head :: head-login (pageTitle='Login Customer', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 
-<div class="container-fluid min-vh-100" id="page">
+<style>
+    .login-button {
+        font-weight: bold;
+        background-color: #fd7e14;
+        border-color: #fd7e14;
+        padding: 10px;
+        min-width: 150px;
+        border-radius: 12px;
+    }
+
+    .login-validatie {
+        border-color: #fd7e14;
+        color: #fd7e14;
+        padding: 10px;
+        min-width: 150px;
+        border-radius: 12px;
+    }
+
+    .login-validatie:hover,
+    .login-button:hover {
+        background-color: #fd7e14!important;
+        border-color: #fd7e14!important;
+        -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+    }
+
+    .login-validatie:focus,
+    .login-button:focus,
+    .login-button:active,
+    .login-validatie:active {
+        color: #ffffff!important;
+        background-color: #fd7e14!important;
+        border-color: #fd7e14!important;
+        box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5)!important
+    }
+
+    .loginbox {
+        -webkit-border-radius: 10px 10px 10px 10px;
+        border-radius: 10px 10px 10px 10px;
+        background: #fff;
+        width: 90%;
+        max-width: 450px;
+        position: relative;
+        padding: 10px 10px 30px 10px;
+        -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+        box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+        margin-top: 150px;
+        overflow: hidden;
+    }
+
+    .loginpage {
+        background-color: #eee;
+    }
+
+    .login-type {
+        text-align: center;
+        border-bottom: 3px solid #ccc;
+        text-decoration: none;
+        padding: 0 0 10px 0;
+    }
+
+    .login-type a:hover {
+        text-decoration: none!important;
+    }
+
+    .login-type.active {
+        font-weight: bold;
+        color: #312783;
+        border-color: #312783;
+    }
+
+</style>
+
+<div class="container-fluid min-vh-100 loginpage" id="page">
     <div id="header" class="row header-default">
-        <header th:replace="fragments/header :: head-login"></header>
+        <header th:replace="fragments/header :: #header-login"></header>
     </div>
     <div id="main-content" class="row">
         <main role="main" class="min-vw-100">
 
             <div class="container-my-3">
                 <div class="row">
-                    <div class="col-md-8 mx-auto">
-                        <h2>Inloggen klant</h2>
-                        <form action="#" th:action="@{/customer-with-accounts}" method="post" novalidate
+                    <div class="col-md-5 mx-auto loginbox">
+
+                        <div class="row mb-3">
+                            <div class="col-6 login-type active">
+                                <a href="#" class="active" style="color: #fd7e14" id="login-form-link">Klant</a>
+                            </div>
+                            <div class="col-6 login-type">
+                                <a href="/loginemployee" id="register-form-link" style="color: #fd7e14">Medewerker</a>
+                            </div>
+                        </div>
+
+                        <div class="col-md-12 py-md-4 mx-lg-0"> <h3 style="color: #fd7e14; font-weight: bold;">Login bij DROVN Bank</h3></div>
+
+                        <form action="#" th:action="@{/customer-with-accounts}" method="post"
                               class="needs-validation">
 
-                                <div id="error" class="alert alert-danger alert-dismissible fade show" role="alert"
-                                     style="display:none!important;">
-                                    <i class="fas fa-exclamation-triangle"
-                                       style="font-size: 2.5rem; padding-right: 20px;"></i>
-                                    <span>Je inloggegevens kloppen niet, controleer de combinatie van je gebruikersnaam en wachtwoord.</span>
-                                </div>
-                                <div id="success" class="alert alert-success alert-dismissible fade show" role="alert"
-                                     style="display:none!important;">
-                                    <i class="fas fa-check-circle" style="font-size: 2.5rem; padding-right: 20px;"></i>
-                                    <span>Je inloggegevens kloppen!</span>
-                                </div>
+                            <div id="error" class="alert alert-danger alert-dismissible fade show" role="alert"
+                                 style="display:none!important;">
+                                <i class="fas fa-exclamation-triangle"
+                                   style="font-size: 2.5rem; padding-right: 20px;"></i>
+                                <span>Je inloggegevens kloppen niet, controleer de combinatie van je gebruikersnaam en wachtwoord.</span>
+                            </div>
+                            <div id="success" class="alert alert-success alert-dismissible fade show" role="alert"
+                                 style="display:none!important;">
+                                <i class="fas fa-check-circle" style="font-size: 2.5rem; padding-right: 20px;"></i>
+                                <span>Je inloggegevens kloppen!</span>
+                            </div>
 
                             <div class="col-auto form-group">
                                 <i class="fa fa-user icon"></i>
                                 <label>Gebruikersnaam</label>
-                                <input type="text" class="form-control" name="userName" required>
+                                <input type="text" class="form-control" name="userName" required maxlength="16" minlength="1"
+                                       pattern="^[A-Za-z0-9_]+$" style="background-color: #f9f9f9">
                             </div>
 
                             <div class="col-auto form-group">
                                 <i class="fa fa-key icon"></i>
                                 <label>Wachtwoord</label>
-                                <input type="password" class="form-control" name="password" required>
+                                <input type="password" class="form-control" name="password" required style="background-color: #f9f9f9">
                             </div>
-
+                            <div class="col-auto">
                             <div class="row">
-                                <div class="col-md-auto">
-                                    <input type="submit" class="btn btn-primary" value="Inloggen"></div>
-                                <div class="col-md-auto">
-                                    <input id="loginvalid" type="button" class="btn btn-outline-primary"
+                                <div class="col-md-6">
+                                    <input type="submit" class="btn btn-primary login-button" value="Inloggen">
+                                </div>
+                                <div class="col-md-6">
+                                    <input id="loginvalid" type="button" class="btn btn-outline-primary login-validatie"
                                            data-dismiss="alert" value="Login validatie">
                                 </div>
                             </div>
-
+                            </div>
                         </form>
-                        <div class="col-md-4 mx-lg-0"><br/>
-                            <a th:href="@{/}">Ga terug naar home</a><br>
-                            <a th:href="@{/loginemployee}">Inloggen als medewerker</a>
-                        </div>
+                    </div>
+
+                    <div class="col-md-12 py-4 mx-auto" style="text-align: center; text-decoration: underline">
+                        <a style="color: #312783" href="/">Ga terug naar home</a>
                     </div>
                 </div>
             </div>
