TransactionServicetest en TransactionDAOtest toegevoegd

--- a/src/main/resources/templates/fragments/alert.html
+++ b/src/main/resources/templates/fragments/alert.html
@@ -7,7 +7,7 @@
         <span>
             We hebben de volgende gegevens van je ontvangen. Controleer je gegevens en gebruik de knop 'registratie
             voltooien' om deze te bevestigen, of gebruik het formulier hieronder om eventuele fouten te herstellen. Het
-            wachtwoord wordt om veiligheidsredenen niet getoond.
+            wachtwoord wordt om veiligheidsredenen niet getoond. Registratie is alleen voor beschermingsdoeleinden.
         </span>
     </div>
 </div>
