--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -26,36 +26,47 @@
                 <form action="/saveaccount" method="post" name="ibanForm">
                     <input type="text" th:field="*{customer.customerID}" value="customer.customerID" hidden/>
 
-                    <div class="form-group mb-sm-4">
-                        <label for="ibanGenerator"><h4> Uw nieuwe rekeningnummer: </h4></label>
-                        <input type="text" th:field="*{account.iban}" id="ibanGenerator"
-                               placeholder="IBAN" readonly required/>
-                    </div>
-                    <div class="form-group mb-sm-4">
-                        <label for="balance"><h4>Uw huidige saldo: <i class="fa fa-eur"></i></h4></label>
-                        <input type="text" size="3" th:field="*{account.balance}" id="balance"
-                               placeholder="Saldo" readonly/>
-                    </div>
-                    <div class="form-group mb-sm-4">
-                    <p>Door te bevestigen gaat u akkoord met de <a href="https://www.termsandconditionsgenerator.com/live.php?token=WMGxy8SYoQkOH2QDFKuWdAqUeZ9mgMuS">algemene
-                            voorwaarden</a>
-                    <br> </p>
-                    <br>
-                        <div class="row-cols-2">
-                    <input type="submit" id="submit" class="btn btn-primary" value="Bevestigen"
-                                       data-toggle="modal" data-target="#confirmationNewAccount">
+                                    <div class="col-auto form-group">
+                                        <label for="ibanGenerator"><h4> Uw nieuwe rekeningnummer: </h4></label>
+                                        <input type="text" style="text-align: center" th:field="*{account.iban}"
+                                               id="ibanGenerator"
+                                               placeholder="IBAN" readonly required/>
+                                    </div>
+                                    <div class="col-auto form-group">
+                                        <input type="text" size="3" th:field="*{account.balance}" id="balance"
+                                               placeholder="Saldo" hidden/>
+                                    </div>
+                                    <div class="col-auto form-group">
+                                        <p>Door te bevestigen gaat u akkoord met de
+                                            <a data-href="https://www.termsandconditionsgenerator.com/live.php?token=WMGxy8SYoQkOH2QDFKuWdAqUeZ9mgMuS" class="openTerms"> algemene voorwaarden</a>
+                                            <br></p>
+                                        <br>
+                                    </div>
+                                </form>
+                                <div class="row">
+                                    <div class=" col-auto">
+                                        <div class="col-md-4">
+                                            <input type="submit" id="submit"
+                                                   class="btn btn-primary confirmation-button"
+                                                   value="Bevestigen"
+                                                   onclick="$('#confirmationNewAccount').modal();">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="col-auto">
+                                        <input type="button" class="btn btn-primary accountoverview-button"
+                                               value="Rekeningoverzicht" id="back-button">
+                                        <form action="#" method="get" th:action="@{/customer-with-accounts}">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </form>
-                <div class="row-cols-3">
-                <form action="#" method="get" th:action="@{/customer-with-accounts}">
-                    <div class="col-md-4">
-                        <input type="submit" class="btn btn-primary" value="Rekeningoverzicht">
-                    </div>
-                </form>
                 </div>
             </div>
-        </div>
+        </main>
     </div>
 </div>
 <div class="row footer-default" id="footer">
