--- a/src/main/resources/templates/pages/employee-dashboard-private.html
+++ b/src/main/resources/templates/pages/employee-dashboard-private.html
@@ -4,11 +4,32 @@
 <body>
 <style>
     #uitloggenemployee {
-        position: absolute;
+        position: relative;
         top: 0;
         right: 0;
         margin-right: -1000px;
     }
+
+    .meer-info {
+        border-color: #fd7e14;
+        color: #fd7e14;
+    }
+
+    .meer-info:hover {
+        background-color: #fd7e14!important;
+        border-color: #fd7e14!important;
+        -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+    }
+
+    .meer-info:focus,
+    .meer-info:active {
+        color: #ffffff!important;
+        background-color: #fd7e14!important;
+        border-color: #fd7e14!important;
+        box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5)!important
+    }
+
 </style>
 
 <div class="container-fluid min-vh-100" id="page">
@@ -44,7 +65,7 @@
                                 <td th:text="${np.account.getIban()}"></td>
                                 <td th:text="${np.getBalance()}"></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-primary" data-toggle="modal"
+                                    <button type="button" class="btn btn-outline-primary meer-info" data-toggle="modal"
                                             data-target=".bd-example-modal-lg"
                                             th:onclick="showMoreInfo([[${np.naturalPerson.getDateOfBirth()}]],[[${np.naturalPerson.getAddress()}]],[[${np.naturalPerson.getEmail()}]],[[${np.naturalPerson.getPhone()}]])">
                                             Meer info
